--- a/ToDesktop/launcher.service
+++ b/ToDesktop/launcher.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=My Script
-After=network.target
+After=network-online.target
+Wants=network-online.target
 
 [Service]
 ExecStart=/usr/bin/python3 /home/pi/Desktop/git_Update_Repository.py
