--- a/ToDesktop/launcher.service
+++ b/ToDesktop/launcher.service
@@ -1,9 +1,10 @@
 [Unit]
-Description=My Script
+Description=Git Update Repository Service
 After=network-online.target
 Wants=network-online.target
 
 [Service]
+ExecStartPre=/bin/sleep 30
 ExecStart=/usr/bin/python3 /home/pi/Desktop/git_Update_Repository.py
 
 [Install]
