--- a/ClientDesktop/listener.service
+++ b/ClientDesktop/listener.service
@@ -7,6 +7,7 @@ User=pi
 Type=simple
 ExecStart=/usr/bin/python3 /home/pi/Desktop/3DScanner/Client/client_listen.py
 Restart=always
+RestartSec=5s
 
 [Install]
 WantedBy=multi-user.target
